<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/white" android:orientation="vertical">

	<LinearLayout android:layout_alignParentBottom="true"
		android:id="@+id/user_button_layout"
		android:layout_centerHorizontal="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:paddingTop="5dip" android:background="@color/gray">

		<Button android:id="@+id/user_save_button"
			android:layout_width="150dip" android:paddingLeft="6dip"
			android:layout_gravity="left" android:text="@string/save"
			android:layout_weight="0.4" android:layout_height="wrap_content" />

		<View android:layout_width="0dip"
			android:layout_height="wrap_content" android:visibility="gone"
			android:layout_weight="0.2" />

		<Button android:id="@+id/user_cancel_button"
			android:layout_width="150dip" android:paddingRight="6dip"
			android:layout_gravity="right" android:text="@string/cancel"
			android:layout_weight="0.4" android:layout_height="wrap_content" />
	</LinearLayout>

	<ScrollView android:layout_width="fill_parent"
		android:layout_above="@+id/user_button_layout"
		android:layout_height="fill_parent">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:paddingTop="10dip" android:paddingLeft="10dip"
			android:paddingRight="10dip" android:paddingBottom="15dip">

			<EditText android:id="@+id/user_name_text" android:text=""
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:imeOptions="actionDone"
				android:hint="@string/user_name_hint"
				android:inputType="textCapWords" />

			<TextView android:layout_width="wrap_content"
				android:textColor="@color/gray" android:textSize="12dip"
				android:text="@string/user_name_detail"
				android:layout_height="wrap_content" />

			<EditText android:id="@+id/user_email_text"
				android:layout_marginTop="20dip" android:text=""
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:imeOptions="actionDone"
				android:hint="@string/user_email_hint"
				android:inputType="textEmailAddress" />

			<TextView android:layout_width="wrap_content"
				android:textColor="@color/gray" android:textSize="12dip"
				android:text="@string/user_email_detail"
				android:layout_height="wrap_content" />

		</LinearLayout>

	</ScrollView>

</RelativeLayout>

