<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/white" android:orientation="vertical">

	<LinearLayout android:layout_alignParentBottom="true"
		android:id="@+id/comment_button_layout"
		android:layout_centerHorizontal="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:paddingTop="5dip" android:background="@color/gray">

		<Button android:id="@+id/comment_save_button"
			android:layout_width="150dip" android:paddingLeft="6dip"
			android:layout_gravity="left" android:text="@string/save"
			android:layout_weight="0.4" android:layout_height="wrap_content" />

		<View android:layout_width="0dip"
			android:layout_height="wrap_content" android:visibility="gone"
			android:layout_weight="0.2" />

		<Button android:id="@+id/comment_cancel_button"
			android:layout_width="150dip" android:paddingRight="6dip"
			android:layout_gravity="right" android:text="@string/cancel"
			android:layout_weight="0.4" android:layout_height="wrap_content" />
	</LinearLayout>

	<ScrollView android:layout_width="fill_parent"
		android:layout_above="@+id/comment_button_layout"
		android:layout_height="fill_parent">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:paddingTop="10dip" android:paddingLeft="10dip"
			android:paddingRight="10dip" android:paddingBottom="15dip">

			<EditText android:id="@+id/comment_comment_text"
				android:text="" android:layout_width="fill_parent" android:lines="4"
				android:layout_height="fill_parent" android:imeOptions="actionDone"
				android:hint="@string/comment_hint"
				android:inputType="textCapSentences|textMultiLine" />

			<RadioGroup android:id="@+id/comment_radio_group"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal">

				<RadioButton android:text="@string/comment_everybody"
					android:layout_width="fill_parent"
					android:id="@+id/comment_visible_public_radio"
					android:layout_height="wrap_content" android:textSize="14sp"
					android:textColor="@color/gray" />

				<RadioButton android:text="@string/comment_only_me"
					android:id="@+id/comment_visible_private_radio"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textSize="14sp"
					android:layout_marginLeft="15dip" android:textColor="@color/gray" />


			</RadioGroup>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>

