<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Amazon="http://schemas.android.com/apk/res/com.bim.pubmed"
    android:id="@+id/pubmed"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pubmed_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="horizontal"
            android:paddingTop="5dip" >

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/pubmed_button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/clear" />

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/pubmed_button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/search" />

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="0.2" />
        </LinearLayout>

        <com.amazon.device.ads.AdLayout
            android:id="@+id/ad_view"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            Amazon:adSize="320x50" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/pubmed_button_layout"
        android:background="@drawable/bg_main"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:textColor="@color/black" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:paddingRight="6dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/pubmed_search_term_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pubmed_search_term_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:padding="3dip"
                    android:scrollHorizontally="true"
                    android:text="" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/pubmed_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/pubmed_radio_and"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pubmed_radio_and"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/pubmed_radio_or"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:text="@string/pubmed_radio_or"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </RadioGroup>

            <ListView
                android:id="@+id/pubmed_search_field_list"
                android:layout_width="fill_parent"
                android:layout_height="170dip"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/pubmed_search_add_field_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dip"
                android:src="@drawable/field_add"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/pubmed_search_human_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dip"
                    android:text="@string/pubmed_human"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/pubmed_search_animal_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:text="@string/pubmed_animal"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/pubmed_search_male_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dip"
                    android:text="@string/pubmed_male"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/pubmed_search_female_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dip"
                    android:text="@string/pubmed_female"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/pubmed_sort_by"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/pubmed_sort_by_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/pubmed_sort_by"
                    android:soundEffectsEnabled="true" />
            </LinearLayout><View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="50dp"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>